[project]
name = "comfywarp"
description = "Nodes:LoadFrameSequence, LoadFrame"
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-python", "scikit-image"]

[project.urls]
Repository = "https://github.com/Sxela/ComfyWarp"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyWarp"
Icon = ""
